# raytrace

./: .gitignore  README.md  raytrace.py  vec3.py
raytrace/: CMakeLists.txt  entities.hpp  glad.c  main.cpp  mainOld.cpp  metal_kernel.c  metal_raytracer.cpp  metal_raytracer.hpp  opencl_kernel.c  opencl_raytracer.cpp  opencl_raytracer.hpp  sample.cpp  structs.hpp  utils.cpp  utils.hpp
raytrace/include/: linmath.h  linmath.hpp
raytrace/include/glad/: glad.h
